# example-rust

./: Cargo.toml
src/: main.rs
