[package]
name = "example-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-postgres = "0.12.0"
tokio-postgres = "0.7.10"
dotenv = "0.15.0"
lettre = { version = "0.11.0", features = ["rustls-tls"] }  # <-- Usar rustls en lettre
jsonwebtoken = "9.3.0"
rand = "0.8.5"
# openssl = { version = "0.10", features = ["vendored"] }  # <-- Eliminar esta línea
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }  # Ya está correcto
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
